Convert the experience page to flex layout also and additionally fix the overflow for images on the portfolio page.

--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -34,23 +34,27 @@
     margin-left: auto;
     max-width: 256px;
     max-height: 256px;
+    overflow: hidden;
 }
 
 .datamaxx-icon {
     filter: invert(0.5);
     margin: auto 0 auto auto;
+    overflow: hidden;
 }
 
 .hosthoarders-icon {
     margin: auto 0 auto auto;
     max-width: 256px;
     max-height: 256px;
+    overflow: hidden;
 }
 
 .bluevm-icon {
     margin: auto 0 auto auto;
     max-width: 256px;
     max-height: 256px;
+    overflow: hidden;
 }
 
 .disclaimer-text {
