--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -13,3 +13,7 @@
     margin: auto;
     width: 70%;
 }
+
+.no-overflow-img {
+    overflow: hidden;
+}
